src/test/compile-fail/cap-clause-unresolved-move.rs
// error-pattern:unresolved name: z
fn main() {
    let x = 5;
    let y = sendfn[move z, x]() {
    };
}